--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Kadi App" />
+    <meta property="og:description" content="Counting made simple" />
     <meta property="og:image" content="%PUBLIC_URL%/donut.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
