--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Kadi App" />
     <meta property="og:description" content="Counting made simple" />
-    <meta property="og:image" content="%PUBLIC_URL%/donut.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/donut-01.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
