--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Counting made simple" />
+    <meta property="og:url" content="https://kadi-app.basithkunimal.com" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Kadi App" />
     <meta property="og:description" content="Counting made simple" />
-    <meta property="og:image" content="%PUBLIC_URL%/donut-01.png" />
+    <meta property="og:image" content="https://kadi-app.basithkunimal.com/donut-01.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
